fixed some spacing issues

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -122,7 +122,7 @@ p a {
     text-decoration: underline;
 }
 ul {
-    padding-left: var(--body-padding);
+    padding: 0 var(--body-padding);
     margin-block-start: 0;
 }
 li {
