--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -95,7 +95,7 @@
     box-shadow: 0px 1px 0px var(--shadow-light);
 }
 audio {
-    margin-block-end: var(--body-font-size);
+    margin-block-end: calc(var(--body-font-size) * 0.8);
 }
 #list-of-works p:not(:last-child) {
     margin-block-end: calc(var(--body-font-size) / 2);
@@ -114,9 +114,8 @@ audio {
         margin-top: 1px;
     }
     .youtube {
-        margin-top: calc(var(--body-padding) * 0.75);
         margin-right: 0;
-        margin-bottom: calc(var(--body-padding) * 0.75);
+        margin-bottom: calc(var(--body-font-size) * 0.8);
         margin-left: calc(var(--body-padding) * -1);
     }
     .youtube iframe {
@@ -158,7 +157,7 @@ audio {
         width: 100%;
         height: 0;
         padding-bottom: calc(100% / 1.77778);
-        margin: 0 0 1em 0;
+        margin: 0 0 calc(var(--body-font-size) * 0.8) 0;
     }
     .youtube iframe {
         position: absolute;
